--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
-			<h1>YOUR NAME</h1>
+			<h1>Sunayana Hubli</h1>
 			<hr>
-			YOUR TITLE
+			MS in Computer Science, UMass Lowell
 			<hr>
 		</header>
 		<main>
@@ -34,17 +34,17 @@
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
-                    <p>HTML, CSS, GitHub, VS Code...</p>
+                    <p>Java, ReactJS, AWS, HTML, CSS, GitHub, VS Code</p>
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
 					<!-- your education -->
-                    <h3>YOUR MAJOR</h3>
+                    <h3>MS Computer Science</h3>
                     <p>
-                        Your university or school
+                        University of Massachusetts, Lowell
                     </p>
                     <p>
-                        2018-2022
+                        2022-2023
                     </p>
 				</section>            
 			</article>
@@ -52,22 +52,21 @@
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-					<p>A brief paragraph about you and what kind of company you want to work for.</p>
+					<p>Aspiring to become a software developer and create some amazing solutions.</p>
 				</section>
 				<section>
 					<h2>WORK EXPERIENCE</h2>
 					<!-- your work experience -->
-                    <h3>JOB TITLE</h3>
+                    <h3> Senior Engineer</h3>
                     <p>
-                            Company Name | 2008 - 2010
+                            Siemens Healthineers | Bangalore
                     </p>
                     <p>
-                            Describe what you did in this position with one summary sentence and no more than 3 bullet points with specific highlights
-                    </p>
+                            Senior Engineer
                     <ul>
-                            <li>Cool accomplishment</li>
-                            <li>Cool accomplishment</li>
-                            <li>Cool accomplishment</li>
+                            <li>Website Development and Testing</li>
+                            <li>Ultrsound Imaging Testing</li>
+
                     </ul>
 				</section>
 			</article>
