--- a/index.html
+++ b/index.html
@@ -79,32 +79,37 @@
 					<!-- about you -->
 					<p>Aspiring to become a software developer and create some amazing solutions.</p>
 				</section>
+				<section>				<p>
+					<h2>My Projects</h2>
+					<ul>
+					<li><a href="https://github.com/sunayanahubli/SimpleCounter"><b>Counter</b></a> A simple counter build using JavaScript</a></li>
+					<li><b>Dine Safe: </b>Designed and developed a restaurant details website catering to dietary restrictions and allergies, employing JavaScript, ReactJS, and MongoDB for data storage.</li> 
+					<li><b>Detection of diabetic retinopathy</b>: Disease idendtification in retinal images, utilizing Neural Networks, SVM, and various Machine Learning algorithms within Python using TensorFlow and sklearn.</li> 
+					<li><b><a href="https://github.com/sunayanahubli/FoundationsInDigitalHealth/tree/main/Project_02">Search engine: </a></b> Development of a quick search of for the MIMIC database with advanced data indexing using Solr, Python, Flask, and JavaScript.</li> 
+					<li><b><a href="https://github.com/sunayanahubli/FoundationsInDigitalHealth/tree/main/Project_01"> Identify cycle/loops in UMLS:</a> </b>Developed a Python-based solution to identify cycles in the UMLS database, with an integration into MySQL.</li> 
+	</ul></p>
+	</section>
 				<section>
 					<h2>WORK EXPERIENCE</h2>
-					<!-- your work experience -->
-                    <h3> Senior Engineer</h3>
-                    <p>
-                            Siemens Healthineers | Bangalore
-                    </p>
-                    <p>
-                            Senior Engineer
+                    
                     <ul>
-                            <li>Website Development and Testing</li>
-                            <li>Ultrsound Imaging Testing</li>
-
+                            <li><p>
+								<h3> Senior Engineer | Siemens Healthineers, Bangalore</h3></p> 			
+								<p>Worked on development of the 'Immunization Management' Web Application using Java and ReactJS. Responsible for automation testing for the 'Simulator Training' web application, using AWS, C#, and Selenium to ensure optimal functionality and performance.</p>
+							</li>
+							<li><p>
+								<h3> Software Engineer | Siemens Medical Solutions, Issaquah</h3></p> 			
+								<p>Focused on verifying Ultrasound systems, particularly in Medical Imaging. Responsibilities included requirement reviews, test case creation, execution, and comprehensive test reporting.</p>
+							</li>
+							<li><p>
+								<h3> Associate Engineer | Siemens, Bangalore, India</h3></p> 			
+								<p>Engaged in development of scripts using Image Processing Software, focusing on C# and OpenCV for Ultrasound Images.</p>
+							</li>
                     </ul>
 
 
 				</section>
-				<section>				<p>
-				<h2>ACADEMIC WORK</h2>
-				<ul>
-				<li>Designed and developed a restaurant details website catering to dietary restrictions and allergies, employing JavaScript, ReactJS, and MongoDB for data storage.</li> 
-				<li>Detection of diabetic retinopathy in retinal images, utilizing Neural Networks, SVM, and various Machine Learning algorithms within Python using TensorFlow and sklearn.</li> 
-				<li>Search engine for the MIMIC database with advanced data indexing using Solr, Python, Flask, and JavaScript.</li> 
-				<li>Developed a Python-based solution to identify cycles in the UMLS database, with an integration into MySQL.</li> 
-</ul></p>
-</section>
+				
 
 			</article>
 		</main>
