--- a/index.html
+++ b/index.html
@@ -16,15 +16,7 @@
   gtag('config', 'G-XSR2WC9ZN8');
 
 </script>
-<script >
-	document.getElementById('dark-mode-switch').addEventListener('change', function() {
-    if (this.checked) {
-        document.body.classList.add('dark-mode');
-    } else {
-        document.body.classList.remove('dark-mode');
-    }
-});
-
+<script src="script.js">
 </script>
 </head>
 <body>
