Commenting Dark mode until feature is complete

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     </header>
     <main>
         <article id="mainLeft">
-            <div class="dark-mode-toggle">
+            <!-- <div class="dark-mode-toggle">
                 <input type="checkbox" id="dark-mode-switch">
                 <label for="dark-mode-switch"></label>
                 <p><br>Dark mode</p>
-            </div>
+            </div> -->
             <section>
 				
 				
