--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <article id="mainRight">
             <section>
                 <h2>ABOUT</h2>
-                <p>Aspiring to become a software developer and create amazing solutions.</p>
+                <p>Aspiring to become a Software Engineer and be part of teams that create amazing solutions.</p>
             </section>
             <section>
                 <h2>My Projects</h2>
