enable dark mode by default

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 </script>
 
 </head>
-<body>
+<body class="dark-mode">
     <header id="header">
         <div class="dark-mode-toggle">
-            <input type="checkbox" id="dark-mode-switch">
+            <input type="checkbox" id="dark-mode-switch" checked>
             <label for="dark-mode-switch"></label>
             <p><br>Dark mode</p>
         </div>
@@ -85,7 +85,7 @@
                     <li><a href="https://github.com/sunayanahubli/SimpleCounter" class="project-link" target="_blank"><b>Counter</b></a> - A simple counter built using JavaScript</li>
                     <li><b><a href="https://github.com/sunayanahubli/BookHub"  class="project-link" target="_blank">Book Hub: </b> </a>Developed a Book Catalog web application using Java Spring boot and ReactJS with MySql. </li>
                     <li><b><a href="https://github.com/sunayanahubli/Dine-Safe-App"  class="project-link" target="_blank">Dine Safe:</b> </a>Designed and developed a restaurant details website catering to dietary restrictions and allergies, employing JavaScript, and MongoDB for data storage.</li>
-                    <li><b>Detection of diabetic retinopathy:</b> Disease identification in retinal images, utilizing Neural Networks, SVM, and various Machine Learning algorithms within Python using TensorFlow and scikit-learn.</li>
+                    <li><b><a href="https://github.com/sunayanahubli/DR_Detection"   class="project-link" target="_blank">Detection of diabetic retinopathy:</b></a>Disease identification in retinal images, utilizing Neural Networks, SVM, and various Machine Learning algorithms within Python using TensorFlow and scikit-learn.</li>
                     <li><b><a href="https://github.com/sunayanahubli/FoundationsInDigitalHealth/tree/main/Project_02" class="project-link" target="_blank">Search engine:</a></b> Development of a quick search for the MIMIC database with advanced data indexing using Solr, Python, Flask, and JavaScript.</li>
                     <li><b><a href="https://github.com/sunayanahubli/FoundationsInDigitalHealth/tree/main/Project_01" class="project-link" target="_blank">Identify cycle/loops in UMLS:</a></b> Developed a Python-based solution to identify cycles in the UMLS database, with integration into MySQL.</li>
                     <li><b><a href="https://github.com/sunayanahubli/AdvancedNetworkSecurityProjects"  class="project-link" target="_blank">Overlay network:  </a></b>: Built a Client/Server network with Python and Docker containers. </li>
