--- a/index.html
+++ b/index.html
@@ -70,15 +70,9 @@
             </section>
             <section>
                 <h2>EDUCATION</h2>
-                <h3>MS Computer Science</h3>
+                <p>MS Computer Science</p>
                 <p>University of Massachusetts, Lowell</p>
                 <p>2022-2023</p>
-            </section>
-        </article>
-        <article id="mainRight">
-            <section>
-                <h2>ABOUT</h2>
-                <p>Aspiring to become a Software Engineer and be part of teams that create amazing solutions.</p>
             </section>
             <section>
                 <h2>My Projects</h2>
@@ -93,10 +87,17 @@
                     <li><b><a href="https://github.com/sunayanahubli/KnowledgeGraphs" class="project-link" target="_blank">Knowledge Graphs: </a></b> Research and PoCs </li>
                 </ul>
             </section>
+        </article>
+        <article id="mainRight">
+            <section>
+                <h2>ABOUT</h2>
+                <p>Aspiring to become a Software Engineer and be part of teams that create amazing solutions.</p>
+            </section>
             <section>
                 <h2>WORK EXPERIENCE</h2>
                 <ul>        
                         <h3>Senior Engineer | Siemens Healthineers, Bangalore</h3>
+                        <li>Test Management of multiple web applications- Vaccine Management, Smart Simulator, and Log Viewer.</li>
                         <li>Performed test activities like creating Test Strategy, Plan, and test cases, participation in risk assessment, audits, and deployment verification.
                         </li>
                         <li>  Implemented BDD and E2E test automation with Selenium, Cucumber, and Cypress.
@@ -123,6 +124,19 @@
                                 <li>Development of test scripts using C#, NUnit, and Selenium.</li>
                     <li>Development of Image Processing scripts using C# and OpenCV to verify ultrasound quality.</li>
                
+                </ul>
+            </section>
+            <section>
+                <h2>ACADEMIC EXPERIENCE</h2>
+                <ul>        
+                        <h3>Graduate Research Work| University of Massachusetts, Lowell</h3>
+                        <li>Website Development: Research and development of Data Science Curriculum for the K-12 level.
+                            Setup the web application : https://sites.uml.edu/ds4kids/
+                        </li>
+                        <li>  Computer Science Grader : Grading and assistance for Grad-level Machine Learning Course.
+                        </li>
+                        <li>  Graduate Researcher: Research work on Knowledge graphs. Its creation, applications and optimization using Python. 
+                        </li>
                 </ul>
             </section>
         </article>
